Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm
@@ -476,6 +476,7 @@ WebViewImpl::WebViewImpl(NSView <WebViewImplDelegate> *view, WKWebView *outerWeb
     registerDraggedTypes();
 
     m_view.wantsLayer = YES;
+    m_view.acceptsTouchEvents = YES;
 
     // Explicitly set the layer contents placement so AppKit will make sure that our layer has masksToBounds set to YES.
     m_view.layerContentsPlacement = NSViewLayerContentsPlacementTopLeft;
@@ -3116,7 +3117,7 @@ void WebViewImpl::magnifyWithEvent(NSEvent *event)
 {
     if (!m_allowsMagnification) {
 #if ENABLE(MAC_GESTURE_EVENTS)
-        NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view);
+        NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view, touchesOrderedByAge());
         m_page->handleGestureEvent(webEvent);
 #endif
         [m_view _web_superMagnifyWithEvent:event];
@@ -3133,11 +3134,59 @@ void WebViewImpl::magnifyWithEvent(NSEvent *event)
         return;
     }
 
-    NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view);
+    NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view, touchesOrderedByAge());
     m_page->handleGestureEvent(webEvent);
 #else
     gestureController.handleMagnificationGestureEvent(event, [m_view convertPoint:event.locationInWindow fromView:nil]);
 #endif
+}
+
+Vector<NSTouch *> WebViewImpl::touchesOrderedByAge()
+{
+    Vector<NSTouch *> touches;
+
+    for (auto& touchIdentity : m_activeTouchIdentities) {
+        for (NSTouch *touch in m_lastTouches.get()) {
+            if (![touch.identity isEqual:touchIdentity.get()])
+                continue;
+            touches.append(touch);
+            break;
+        }
+    }
+
+    return touches;
+}
+
+void WebViewImpl::touchesBeganWithEvent(NSEvent *event)
+{
+    m_lastTouches = [event touchesMatchingPhase:NSTouchPhaseAny inView:m_view].allObjects;
+    for (NSTouch *touch in [event touchesMatchingPhase:NSTouchPhaseBegan inView:m_view])
+        m_activeTouchIdentities.append(touch.identity);
+}
+
+void WebViewImpl::touchesMovedWithEvent(NSEvent *event)
+{
+    m_lastTouches = [event touchesMatchingPhase:NSTouchPhaseAny inView:m_view].allObjects;
+}
+
+void WebViewImpl::touchesEndedWithEvent(NSEvent *event)
+{
+    m_lastTouches = [event touchesMatchingPhase:NSTouchPhaseAny inView:m_view].allObjects;
+    for (NSTouch *touch in [event touchesMatchingPhase:NSTouchPhaseEnded inView:m_view]) {
+        size_t identityIndex = m_activeTouchIdentities.find(touch.identity);
+        ASSERT(identityIndex != notFound);
+        m_activeTouchIdentities.remove(identityIndex);
+    }
+}
+
+void WebViewImpl::touchesCancelledWithEvent(NSEvent *event)
+{
+    m_lastTouches = [event touchesMatchingPhase:NSTouchPhaseAny inView:m_view].allObjects;
+    for (NSTouch *touch in [event touchesMatchingPhase:NSTouchPhaseCancelled inView:m_view]) {
+        size_t identityIndex = m_activeTouchIdentities.find(touch.identity);
+        ASSERT(identityIndex != notFound);
+        m_activeTouchIdentities.remove(identityIndex);
+    }
 }
 
 void WebViewImpl::smartMagnifyWithEvent(NSEvent *event)
@@ -3165,7 +3214,7 @@ void WebViewImpl::setLastMouseDownEvent(NSEvent *event)
 #if ENABLE(MAC_GESTURE_EVENTS)
 void WebViewImpl::rotateWithEvent(NSEvent *event)
 {
-    NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view);
+    NativeWebGestureEvent webEvent = NativeWebGestureEvent(event, m_view, touchesOrderedByAge());
     m_page->handleGestureEvent(webEvent);
 }
 #endif
